--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,6 @@
+@import url('../assets/fonts/OpenSans-Regular.ttf');
+@import url('../assets/fonts/OpenSans-Bold.ttf');
+
 :root {
     --mainFont: "Open Sans", Arial, sans-serif;
 }
@@ -40,6 +43,8 @@ h1 {
     font-weight: bold;
     font-size: 48px;
     color: #333;
+    cursor: pointer;
+    user-select: none;
 }
 
 .icons {
@@ -50,4 +55,10 @@ h1 {
 
 img {
     height: 40px;
+    transition: .2s;
+}
+
+img:hover {
+    transform: scale(1.1);
+
 }
