--- a/src/styles/app-frame.css
+++ b/src/styles/app-frame.css
@@ -6,5 +6,20 @@
     background: #FAF2E5;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 2px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
+}
 
+@media screen and (orientation: portrait) and (max-width: 800px) {
+    .app-frame {
+        width: 100%;
+        height: 100%;
+        min-height: 600px;
+    }
+}
+
+/*  TODO: Media queries for mobile in landscape view */
+@media screen and (orientation: landscape) and (max-width: 800px) {
+    .app-frame {
+        width: 100%;
+        height: 100%;
+    }
 }
