--- a/src/styles/background-frame.css
+++ b/src/styles/background-frame.css
@@ -16,3 +16,16 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 2px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
 }
+
+@media screen and (max-width: 800px) {
+    .background-frame {
+        display: block;
+        width: 100vw;
+        height: 100vh;
+    }
+
+
+    .background-frame__color {
+        display: none;
+    }
+}
