--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,3 +1,9 @@
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: var(--main-font-size);
+    color: var(--dark);
+}
+
 .container {
     min-width: 100vw;
     min-height: 100vh;
