--- a/src/styles/main-frame.css
+++ b/src/styles/main-frame.css
@@ -1,4 +1,4 @@
-.app-frame {
+.background-frame__main {
     grid-column: 2 / 3;
     grid-row: 1 / 3;
     align-self: stretch;
@@ -9,8 +9,9 @@
 }
 
 @media screen and (orientation: portrait) and (max-width: 800px) {
-    .app-frame {
+    .background-frame__main {
         width: 100%;
+        min-width: 300px;
         height: 100%;
         min-height: 600px;
     }
@@ -18,7 +19,7 @@
 
 /*  TODO: Media queries for mobile in landscape view */
 @media screen and (orientation: landscape) and (max-width: 800px) {
-    .app-frame {
+    .background-frame__main {
         width: 100%;
         height: 100%;
     }
