--- a/src/styles/background-frame.css
+++ b/src/styles/background-frame.css
@@ -12,7 +12,7 @@
 .background-frame__color {
     grid-column: 1 / 4;
     grid-row: 2 / 4;
-    background: #F7AA35;
+    background: var(--orange);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 2px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
 }
