--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,10 @@
-body {
+p,
+li,
+form,
+input {
     font-family: Arial, Helvetica, sans-serif;
     font-size: var(--main-font-size);
+    line-height: 1.2;
     color: var(--dark);
 }
 
