--- a/src/styles/main-frame.css
+++ b/src/styles/main-frame.css
@@ -3,9 +3,13 @@
     grid-row: 1 / 3;
     align-self: stretch;
     justify-self: stretch;
-    background: #FAF2E5;
+    background: var(--cream);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2), 0px 2px 1px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14);
     border-radius: 4px;
+    display: grid;
+    grid-template-rows: minmax(200px, 250px) minmax(400px, 500px);
+    justify-items: stretch;
+    align-items: stretch;
 }
 
 @media screen and (orientation: portrait) and (max-width: 800px) {
@@ -17,10 +21,18 @@
     }
 }
 
-/*  TODO: Media queries for mobile in landscape view */
+@media screen and (orientation: portrait) and (max-width: 600px) {
+    .background-frame__main {
+        grid-template-rows: 1fr 3fr;
+    }
+}
+
 @media screen and (orientation: landscape) and (max-width: 800px) {
     .background-frame__main {
         width: 100%;
+        min-width: 600px;
         height: 100%;
+        min-height: 400px;
+        grid-template-rows: 1fr 3fr;
     }
 }
