--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,3 +3,6 @@
 @import 'base.css';
 @import 'background-frame.css';
 @import 'main-frame.css';
+@import 'localization-section.css';
+@import 'data-section.css';
+@import 'data-items.css';
