--- a/src/styles/data-section.css
+++ b/src/styles/data-section.css
@@ -8,7 +8,7 @@
         "basic img"
         "details forecast";
     justify-items: left;
-    align-items: center;
+    align-items: start;
 }
 
 @media screen and (orientation: portrait) and (max-width: 600px) {
