--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -2,7 +2,7 @@ p,
 li,
 ul,
 input {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: var(--main-font);
     font-size: var(--main-font-size);
     line-height: 1.2;
     color: var(--dark);
