--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,5 @@
 @import 'reset.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=latin-ext');
 @import 'variables.css';
 @import 'base.css';
 @import 'background-frame.css';
