--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --main-font: Arial, Helvetica, sans-serif;
+    --main-font: Roboto, Arial, sans-serif;
     --main-font-size: 24px;
     --orange: #F7AA35;
     --cream: #FAF2E5;
