--- a/src/styles/localization-section.css
+++ b/src/styles/localization-section.css
@@ -1,33 +1,61 @@
 .main__localization {
-    position: relative;
     padding: 16px 20px 0 20px;
 }
 
-.form__search {
-    /* position: relative; */
+.main__form {
+    position: relative;
     top: 0;
     left: 0;
-    width: 100%;
-    padding: 20px;
-    font-size: 24px;
-    background: rgba(255, 255, 255, 0.9);
-    border: none;
     border-bottom: 2px solid var(--dark);
     border-radius: 4px 4px 0px 0px;
 }
 
-.form__suggestions {
-    width: calc(100% - 40px);
-    padding: 0 20px;
+.main__form::after {
+    display: block;
+    content: "";
     position: absolute;
+    top: 100%;
+    left: 0;
+    width: 50px;
+    height: 20px;
+    background: var(--dark);
+}
+
+.form__search {
+    width: 100%;
+    padding: 20px;
+    font-size: 24px;
+    background: rgba(255, 255, 255, 0.9);
+    outline: 0;
+    border: none;
+}
+
+.form__icon {
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+    width: 30px;
+    height: 30px;
+    background: url(/assets/loupe.svg) no-repeat;
+    background-size: contain;
+    background-position: center;
+}
+
+.form__suggestions {
+    position: absolute;
+    top: calc(100% + 2px);
+    left: 0;
+    width: 100%;
+    padding: 0 20px;
+    background: rgba(255, 255, 255, 0.7);
     list-style: none;
 }
 
 .form__list-item {
-    padding: 20px;
+    padding: 20px 0;
     font-size: 18px;
-    border: 1px solid rgba(0, 0, 0, 0.16);
-    background: rgba(255, 255, 255, 0.7);
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .form__list-item p {
