--- a/src/styles/localization-section.css
+++ b/src/styles/localization-section.css
@@ -51,12 +51,23 @@
     padding: 0 20px;
     background: rgba(255, 255, 255, 0.85);
     list-style: none;
+    display: none;
+}
+
+.main__form:focus-within .form__suggestions {
+    display: block;
 }
 
 .form__list-item {
     padding: 20px 0;
     font-size: 18px;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
+    transition: .2s;
+}
+
+.form__list-item:hover {
+    padding: 30px 0;
+    background: #fff;
 }
 
 .form__city,
