--- a/src/styles/localization-section.css
+++ b/src/styles/localization-section.css
@@ -14,7 +14,7 @@
     display: block;
     content: "";
     position: absolute;
-    top: 100%;
+    top: calc(100% + 2px);
     left: 0;
     width: 50px;
     height: 20px;
