--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=latin-ext');
 @import 'variables.css';
 @import 'base.css';
+@import 'container.css';
 @import 'background-frame.css';
 @import 'main-frame.css';
 @import 'localization-section.css';
