--- a/src/styles/background-frame.css
+++ b/src/styles/background-frame.css
@@ -18,13 +18,25 @@
     z-index: -10;
 }
 
+@media screen and (orientation: landscape) and (max-width: 800px),
+screen and (orientation: landscape) and (max-height: 670px),
+screen and (orientation: portrait) and (max-width: 800px) {
+    .background-frame {
+        grid-column: 1 / span 1;
+        grid-row: 1 / span 1;
+        overflow: hidden;
+    }
+}
+
 @media screen and (orientation: landscape) and (max-width: 800px) {
     .background-frame {
-        grid-template-columns: minmax(1fr) minmax(600px, 750px) minmax(1fr);
+        grid-template-columns: minmax(20px, 1fr) minmax(600px, 750px) minmax(20px, 1fr);
         grid-template-rows: minmax(20px, 1fr) minmax(200px, 250px) minmax(400px, 500px) minmax(50px, 1fr);
     }
 
     .background-frame__color {
+        grid-column: 1 / 4;
+        grid-row: 3 / 5;
         box-shadow: none;
         border-radius: 0;
     }
@@ -32,10 +44,12 @@
 
 @media screen and (orientation: landscape) and (max-height: 670px) {
     .background-frame {
-        display: block;
-        width: 100vw;
-        height: 100vh;
-        /* overflow: hidden; */
+        grid-template-columns: 1fr minmax(600px, 750px) 1fr;
+        grid-template-rows: 
+        minmax(20px, 1fr) 
+        minmax(190px, 200px) 
+        minmax(370px, 400px) 
+        minmax(20px, 1fr);
     }
 
     .background-frame__color {
@@ -43,12 +57,21 @@
     }
 }
 
+@media screen and (orientation: landscape) and (max-height: 600px) {
+    .background-frame {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+}
+
 @media screen and (orientation: portrait) and (max-width: 800px) {
     .background-frame {
-        width: 100vw;
-        height: 100vh;
-        grid-template-columns: minmax(50px, 1fr) minmax(600px, 750px) minmax(50px, 1fr);
-        grid-template-rows: minmax(50px, 1fr) minmax(200px, 250px) minmax(400px, 500px) minmax(100px, 1fr);
+        grid-template-columns: 1fr minmax(600px, 750px) 1fr;
+        grid-template-rows: 
+        minmax(50px, 1fr) 
+        minmax(200px, 250px) 
+        minmax(400px, 500px) 
+        minmax(100px, 1fr);
     }
 
     .background-frame__color {
@@ -60,10 +83,8 @@
 
 @media screen and (orientation: portrait) and (max-width: 600px) {
     .background-frame {
-        display: block;
-        width: 100vw;
-        height: 100vh;
-        /* overflow: hidden; */
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
     }
 
     .background-frame__color {
