--- a/src/styles/data-items.css
+++ b/src/styles/data-items.css
@@ -29,16 +29,19 @@
     grid-area: forecast;
     width: 100%;
     height: 100%;
-    display: flex;
+    overflow: hidden;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: repeat(4, 1fr);
     justify-content: space-between;
-    align-items: flex-start;
+    align-items: start;
 }
 
 .forecast__day {
     width: 70px;
     height: 100px;
+    overflow: hidden;
     padding: 5px;
-    /* overflow: hidden; */
     background: #fff;
     display: flex;
     flex-direction: column;
@@ -80,15 +83,17 @@
     }
 
     .data__forecast {
-        flex-direction: column;
-        align-items: flex-end;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+        grid-gap: 3px;
+        justify-content: end;
+        align-items: start;
     }
 
     .forecast__day {
+        flex-direction: row;
         width: 120px;
         height: 50px;
-        flex-direction: row;
-        flex-wrap: wrap;
         align-items: center;
     }
 
@@ -99,41 +104,12 @@
 
     .day__icon {
         width: 40%;
-        height: 70%;
+        height: 90%;
     }
 
     .day__temp {
         width: 30%;
         font-size: 18px;
-    }
-}
-
-@media screen and (orientation: landscape) and (max-height: 400px) {
-    .data__temp-big {
-        font-size: 86px;
-        padding-top: 15px;
-    }
-
-    .data__basic {
-        font-size: 16px;
-    }
-
-    .data__detail {
-        font-size: 14px;
-    }
-
-    .forecast__day {
-        width: 120px;
-        height: 45px;
-    }
-
-    .day__icon {
-        width: 40%;
-        height: 70%;
-    }
-
-    .day__temp {
-        font-size: 16px;
     }
 }
 
