--- a/src/styles/data-section.css
+++ b/src/styles/data-section.css
@@ -1,5 +1,6 @@
 .main__data {
-    padding: 0 20px 30px 20px;
+    padding: 20px;
+    padding-top: 0;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 2fr repeat(2, 1fr);
@@ -13,10 +14,9 @@
 
 @media screen and (orientation: landscape) and (max-height: 670px) {
     .main__data {
-        padding: 0 20px 20px 20px;
         grid-template-columns: repeat(2, 3fr) 2fr;
+        grid-template-rows: 3fr 2fr;
         grid-template-areas:
-            "temperature    img       forecast"
             "temperature    img       forecast"
             "basic               details   forecast";
     }
@@ -24,7 +24,6 @@
 
 @media screen and (orientation: portrait) and (max-width: 600px) {
     .main__data {
-        padding: 0 10px 20px 10px;
         grid-template-rows: repeat(4, 1fr);
         grid-template-areas:
             "temperature    img"
