--- a/src/styles/localization-section.css
+++ b/src/styles/localization-section.css
@@ -1,8 +1,8 @@
 .main__localization {
     padding: 16px 20px 0 20px;
     position: relative;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
 }
 
 .main__form {
@@ -54,6 +54,7 @@
 
 .form__suggestions {
     position: absolute;
+    z-index: 2;
     top: calc(100% + 2px);
     left: 0;
     width: 100%;
@@ -127,14 +128,14 @@
 }
 
 .findme-btn__icon {
-display: inline-block;
-height: 30px;
-width: 30px;
-transform: translateY(20%);
-background: url(/assets/place.svg) no-repeat;
-background-size: contain;
-background-position: center;
-baseline: center;
+    display: inline-block;
+    height: 30px;
+    width: 30px;
+    transform: translateY(20%);
+    background: url(/assets/place.svg) no-repeat;
+    background-size: contain;
+    background-position: center;
+    baseline: center;
 }
 
 .localization__findme-btn:hover {
