--- a/src/styles/data-items.css
+++ b/src/styles/data-items.css
@@ -15,7 +15,7 @@
 }
 
 .data__icon {
-  /* position: relative; */
+  position: relative;
   grid-area: img;
   width: 90%;
   height: 80%;
@@ -43,10 +43,16 @@
   height: 100px;
   overflow: hidden;
   padding: 5px;
-  background: #fff;
+  /* background: #fff; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  background: #FAF2E5;
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  border-radius: 8px;
+  box-shadow: 0.1em 0.1em 2px 1px rgba(0, 0, 0, 0.1);
 }
 
 .day__weekday {
@@ -55,10 +61,11 @@
 }
 
 .day__icon {
+  position: relative;
   width: 70%;
   height: 40%;
   align-self: center;
-  background-image: url("/assets/50d.svg");
+  /* background-image: url("/assets/50d.svg"); */
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
