--- a/src/styles/ic-weather.css
+++ b/src/styles/ic-weather.css
@@ -1,10 +1,13 @@
 .icon {
     position: relative;
     display: inline-block;
-    width: 12em;
-    height: 12em;
-    font-size: 1em;
-    /* control icon size here */
+    /* width: 12em; */
+    /* height: 12em; */
+    /* font-size: 1em; */
+}
+
+div.icon {
+    transform: scale(0.2);
 }
 
 /* SUNNY */
