--- a/src/styles/data-section.css
+++ b/src/styles/data-section.css
@@ -14,6 +14,7 @@
 
 @media screen and (orientation: landscape) and (max-height: 670px) {
     .main__data {
+        padding-top: 20px;
         grid-template-columns: repeat(2, 3fr) 2fr;
         grid-template-rows: 3fr 2fr;
         grid-template-areas:
