--- a/src/styles/data-items.css
+++ b/src/styles/data-items.css
@@ -79,10 +79,12 @@
 
   .data__basic {
     font-size: 18px;
+    padding-top: 20px;
   }
 
   .data__detail {
     font-size: 16px;
+    padding-top: 20px;
   }
 
   .data__forecast {
