--- a/src/styles/ic-weather.css
+++ b/src/styles/ic-weather.css
@@ -441,18 +441,23 @@ div.icon {
     
     .data__icons__big {
       left: 6em;
-      top: 4em;
     }
-  }
+}
   
-  @media screen and (orientation: landscape) and (width: 533px) and (height: 320px) {
+@media screen and (orientation: landscape) and (width: 533px) and (height: 320px) {
     .data__icons__big {
         transform: scale(4.2);
         left: 4em;
         top: 0.2em;
-      }
+    }
 
      .icon {
          left:-0.6em;
-     }
+    }
+}
+
+@media screen and (orientation: portrait) and (width: 320px) and (height: 533px) {
+    .data__icons__big {
+        left: 4em;
+    }
 }
