--- a/src/styles/localization-section.css
+++ b/src/styles/localization-section.css
@@ -45,6 +45,7 @@
     background: url(/assets/loupe.svg) no-repeat;
     background-size: contain;
     background-position: center;
+    cursor: pointer;
     opacity: 0.5;
     transition: .2s;
 }
@@ -74,6 +75,7 @@
     font-size: 18px;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
     transition: .2s;
+    cursor: pointer;
 }
 
 .form__list-item:hover {
@@ -125,6 +127,7 @@
     background: transparent;
     border: none;
     outline: none;
+    cursor: pointer;
     opacity: 0.6;
     transition: .2s;
 }
