Handle pressing the key up and down when suggestions display

--- a/src/styles/localization-section.css
+++ b/src/styles/localization-section.css
@@ -82,7 +82,7 @@
     color: var(--orange);
 }
 
-.form__list-item:hover {
+.form__list-item:hover, .form__list-item.active {
     padding: 30px 0;
     background: #fff;
 }
